[package]
name = "proxy"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["macros" ] }
clap = { version = "4.5.51", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "gzip", "deflate", "brotli", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.8.20"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "limit", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
