[package]
name = "proxy"
version = "0.1.3"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["macros" ] }
clap = { version = "4.5.53", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json", "gzip", "deflate", "brotli", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["cors", "limit", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
